panel: Simply code to open menu bar on alt+f1

With GTK+ 3, we cannot do some hacks to deal with grabs. And it turns
out this is really an issue with GTK+ anyway. See
https://bugzilla.gnome.org/show_bug.cgi?id=554057