gnome-panel/panel-menu-bar.c
@@ -298,30 +298,8 @@ void
 panel_menu_bar_popup_menu (PanelMenuBar *menubar,
 			   guint32       activate_time)
 {
-	GtkMenu *menu;
-	GtkMenuShell *menu_shell;
-	
 	g_return_if_fail (PANEL_IS_MENU_BAR (menubar));
 
-	menu = GTK_MENU (menubar->priv->applications_menu);
-
-	/* 
-	 * We need to call _gtk_menu_shell_activate() here as is done in 
-	 * window_key_press_handler in gtkmenubar.c which pops up menu
-	 * when F10 is pressed.
-	 *
-	 * As that function is private its code is replicated here.
-	 */
-	menu_shell = GTK_MENU_SHELL (menubar);
-	/* FIXMEgpoo: We need either accessors or a workaround to
-	   grab the focus  */
-#if 0
-	if (!menu_shell->GSEAL(active)) {
-		gtk_grab_add (GTK_WIDGET (menu_shell));
-		menu_shell->GSEAL(have_grab) = TRUE;
-		menu_shell->GSEAL(active) = TRUE;
-	}
-#endif
-	gtk_menu_shell_select_item (menu_shell,
-				    gtk_menu_get_attach_widget (menu));
+	gtk_menu_shell_select_item (GTK_MENU_SHELL (menubar),
+				    menubar->priv->applications_item);
 }
